--- a/Issac.html
+++ b/Issac.html
@@ -13,30 +13,44 @@
 </head>
 
 <body>
-    <header>
+    <header class="games">
         <nav>
-            <a href="#" class="backhome">Rogue-like</a>
+            <a href="index.html" class="backhome">Rogue-like</a>
             <div class="menu-btn"></div>
 
             <div class="navigation">
                 <div class="navigation-items">
-                    <a href="#">History</a>
-                    <a href="#">Binding of Isaac: Rebirth</a>
-                    <a href="#">Slay the Spire</a>
-                    <a href="#">Dead Cells</a>
+                    <a href="history.html">History</a>
+                    <a href="Issac.html">Binding of Isaac: Rebirth</a>
+                    <a href="slay.html">Slay the Spire</a>
+                    <a href="deadcells.html">Dead Cells</a>
                 </div>
             </div>
         </nav>
 
         <h1 class="bigTitle movement" data-speed="0.1">Binding of Issac:<br>Rebirth</h1>
 
-        <img src="image/issac1.png" class="layer1 movement" data-speed="-0.25">
-        <img src="image/issac2.png" class="layer2 movement" data-speed="0.25">
-        <img src="image/issac3.png" class="layer3 movement" data-speed="0.5">
+        <img src="image/issac1.png" class="layer1 movement" data-speed="-0.25" alt="">
+        <img src="image/issac2.png" class="layer2 movement" data-speed="0.25" alt="">
+        <img src="image/issac3.png" class="layer3 movement" data-speed="0.5" alt="">
     </header>
 
     <main class="gameDescription">
         <div class="shadow"></div>
+
+        <div class="descriptionContainer">
+            <div class="description basic">
+                <p><strong>Name:</strong> Binding of Issac: Rebirth</p>
+                <p><strong>Platform:</strong> Xbox One, macOS, Linux, Nintendo Switch, Nintendo 3DS, Wii U, PlayStation 4, PS Vita, iOS, PC</p>
+                <p><strong>Developer:</strong> Nicalis, Edmund McMillen</p>
+            </div>
+            <div class="description basic">
+                <p><strong>Release Date:</strong> Nov 3, 2014</p>
+                <p><strong>Genre:</strong> Action, RPG, Roguelike</p>
+                <p class="rating"><strong>Rating:</strong></p>
+            </div>
+        </div>
+
         <div class="descriptionContainer">
             <div class="description">
                 <h3 class="title">
@@ -49,13 +63,13 @@
             </div>
 
             <div class="imgContainer">
-                <img src="image/issac about image.png">
+                <img src="image/issac about image.png" alt="Binding of Issac game cover">
             </div>
         </div>
 
         <div class="descriptionContainer">
             <div class="imgContainer">
-                <img class="characterImg" src="image/issac characters.jpg">
+                <img class="characterImg" src="image/issac characters.jpg" alt="Binding of Issac all characters">
             </div>
 
             <div class="description">
@@ -96,8 +110,15 @@
             </div>
 
             <div class="imgContainer">
-                <img src="image/issac bosses.jpg">
+                <img src="image/issac bosses.jpg" alt="Binding of Issac bosses">
             </div>
+        </div>
+
+        <div class="achievements">
+            <h3 class="title">
+                Achievements
+                <div class="border"></div>
+            </h3>
         </div>
     </main>
 
