--- a/index.html
+++ b/index.html
@@ -16,55 +16,55 @@
 
     <header>
         <nav>
-            <a href="#" class="backhome">Rogue-like</a>
+            <a href="index.html" class="backhome">Rogue-like</a>
             <div class="menu-btn"></div>
 
             <div class="navigation">
                 <div class="navigation-items">
-                    <a href="#">History</a>
-                    <a href="#">Binding of Isaac: Rebirth</a>
-                    <a href="#">Slay the Spire</a>
-                    <a href="#">Dead Cells</a>
+                    <a href="history.html">History</a>
+                    <a href="Issac.html">Binding of Isaac: Rebirth</a>
+                    <a href="slay.html">Slay the Spire</a>
+                    <a href="deadcells.html">Dead Cells</a>
                 </div>
             </div>
         </nav>
     </header>
 
     <main id="main">
-        <img class="img-icon" src="image/rogue icon.png" alt="rogue 1980">
+        <img class="img-icon" src="image/rogue icon.png" alt="rogue 1980 character">
         <img class="img-slide active" src="image/rogue background.png" alt="rogue 1980">
-        <img class="img-icon" src="image/issac icon.png" alt="rogue 1980">
-        <img class="img-slide" src="image/issac background.jpg" alt="rogue 1980">
-        <img class="img-icon" src="image/slay icon.png" alt="rogue 1980">
-        <img class="img-slide" src="image/slay background.jpg" alt="rogue 1980">
-        <img class="img-icon" src="image/deadcell icon.png" alt="rogue 1980">
-        <img class="img-slide" src="image/deadcell.png" alt="rogue 1980">
+        <img class="img-icon" src="image/issac icon.png" alt="Issac">
+        <img class="img-slide" src="image/issac background.jpg" alt="Binding of Issac: Rebirth">
+        <img class="img-icon" src="image/slay icon.png" alt="Slay the Spire character">
+        <img class="img-slide" src="image/slay background.jpg" alt="Slay the Spire">
+        <img class="img-icon" src="image/deadcell icon.png" alt="Dead Cells character">
+        <img class="img-slide" src="image/deadcell.png" alt="Dead Cells">
 
         <div class="content active">
             <h1>History of<br><span>Rogue-like</span></h1>
             <p>Roguelike games have their roots in the 1980s with the release of the game "Rogue" in 1980, which was a dungeon-crawling game with randomly generated levels, turn-based combat, and permadeath. Rogue became popular among computer hobbyists and its gameplay mechanics and procedural generation would go on to influence the development of many other games. Throughout the 1980s and 1990s, roguelike games continued to be developed...</p>
-            <a href="#">Learn More</a>
+            <a href="history.html">Learn More</a>
         </div>
         <div class="content">
             <h1><span>Binding of Issac: Rebirth</span></h1>
             <p>"The Binding of Isaac" is a roguelike video game developed by Edmund McMillen and Florian Himsl. It was first released in 2011 and has since been remade and expanded several times. The game is a top-down dungeon crawler with randomly generated levels, permadeath, and a focus on item-based progression. The story of "The Binding of Isaac" follows a young boy named Isaac...</p>
-            <a href="#">Learn More</a>
+            <a href="Issac.html">Learn More</a>
         </div>
         <div class="content">
             <h1><span>Slay the Spire</span></h1>
             <p>"Slay the Spire" is a roguelike deck-building video game developed by MegaCrit. It was first released in 2019 and has since gained a large following for its addictive gameplay and unique combination of genres. The game is set in a fantasy world and follows the player character as they climb the titular Spire, a tower filled with monsters and challenges. Players must navigate through a series of randomly generated floors, each with a unique set of encounters and enemies, in order to reach the top of the Spire. Gameplay in "Slay the Spire" revolves around building and customizing a deck of cards...</p>
-            <a href="#">Learn More</a>
+            <a href="slay.html">Learn More</a>
         </div>
         <div class="content">
             <h1><span>Dead Cells</span></h1>
             <p>"Dead Cells" is a roguelike metroidvania video game developed by Motion Twin. It was first released in 2018 and has since become known for its fast-paced combat, challenging gameplay, and procedurally generated levels. The game is set in a dark and atmospheric world and follows the player character, a sentient mass of cells, as they navigate through a series of interconnected levels filled with deadly enemies and traps. Players must fight their way through each level while collecting new weapons and abilities and upgrading their stats. Gameplay in "Dead Cells" is fast and frenetic...</p>
-            <a href="#">Learn More</a>
+            <a href="deadcells.html">Learn More</a>
         </div>
 
         <div class="link-icons">
-            <a href="#"><i class="fa-brands fa-steam"></i></a>
-            <a href="#"><i class="fa-solid fa-book"></i></a>
-            <a href="#"><i class="fa-solid fa-user"></i></a>
+            <a href="https://store.steampowered.com/app/1443430/Rogue/" title="Link to steam store page" class="steamBtn"><i class="fa-brands fa-steam"></i></a>
+            <a href="https://en.wikipedia.org/wiki/Rogue_(video_game)" title="Link to game wiki page" class="wikiBtn"><i class="fa-solid fa-book"></i></a>
+            <a href="https://en.wikipedia.org/wiki/Glenn_Wichman" title="Link to developer description page" class="developerBtn"><i class="fa-solid fa-user"></i></a>
         </div>
 
         <div class="slider-navigation">
