--- a/Issac.html
+++ b/Issac.html
@@ -63,13 +63,13 @@
             </div>
 
             <div class="imgContainer">
-                <img src="image/issac about image.png" alt="Binding of Issac game cover">
+                <img src="image/issac%20about%20image.png" alt="Binding of Issac game cover">
             </div>
         </div>
 
         <div class="descriptionContainer">
             <div class="imgContainer">
-                <img class="characterImg" src="image/issac characters.jpg" alt="Binding of Issac all characters">
+                <img class="characterImg" src="image/issac%20characters.jpg" alt="Binding of Issac all characters">
             </div>
 
             <div class="description">
@@ -110,7 +110,7 @@
             </div>
 
             <div class="imgContainer">
-                <img src="image/issac bosses.jpg" alt="Binding of Issac bosses">
+                <img src="image/issac%20bosses.jpg" alt="Binding of Issac bosses">
             </div>
         </div>
 
