--- a/deadcells.html
+++ b/deadcells.html
@@ -63,13 +63,13 @@
             </div>
 
             <div class="imgContainer">
-                <img src="image/dead about.jpg" alt="Dead Cells game cover">
+                <img src="image/dead%20about.jpg" alt="Dead Cells game cover">
             </div>
         </div>
 
         <div class="descriptionContainer">
             <div class="imgContainer">
-                <img class="characterImg" src="image/dead characters.jpg" alt="Dead Cells characters">
+                <img class="characterImg" src="image/dead%20characters.jpg" alt="Dead Cells characters">
             </div>
 
             <div class="description">
@@ -98,7 +98,7 @@
             </div>
 
             <div class="imgContainer">
-                <img src="image/dead boss.jpg" alt="Dead Cells bosses">
+                <img src="image/dead%20boss.jpg" alt="Dead Cells bosses">
             </div>
         </div>
 
