--- a/history.html
+++ b/history.html
@@ -30,8 +30,8 @@
 
         <h1 class="bigTitle movement" data-speed="0.1">History of<br>Rogue-like</h1>
 
-        <img src="image/rogue foreground.png" class="layer1 rogue movement" data-speed="-0.25" alt="">
-        <img src="image/rogue background.png" class="layer3 movement" data-speed="0.5" alt="">
+        <img src="image/rogue%20foreground.png" class="layer1 rogue movement" data-speed="-0.25" alt="">
+        <img src="image/rogue%20background.png" class="layer3 movement" data-speed="0.5" alt="">
     </header>
 
     <main class="gameDescription">
@@ -52,13 +52,13 @@
             </div>
 
             <div class="imgContainer">
-                <img src="image/what is rogue.jpg" alt="Rogue-like games collection">
+                <img src="image/what%20is%20rogue.jpg" alt="Rogue-like games collection">
             </div>
         </div>
 
         <div class="descriptionContainer">
             <div class="imgContainer history">
-                <img class="characterImg" src="image/rogue 1980.jpg" alt="Rogue 1980">
+                <img class="characterImg" src="image/rogue%201980.jpg" alt="Rogue 1980">
                 <img class="characterImg" src="image/nethak.jpg" alt="Nethak">
             </div>
 
