--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
     </header>
 
     <main id="main">
-        <img class="img-icon" src="image/rogue icon.png" alt="rogue 1980 character">
-        <img class="img-slide active" src="image/rogue background.png" alt="rogue 1980">
-        <img class="img-icon" src="image/issac icon.png" alt="Issac">
-        <img class="img-slide" src="image/issac background.jpg" alt="Binding of Issac: Rebirth">
-        <img class="img-icon" src="image/slay icon.png" alt="Slay the Spire character">
-        <img class="img-slide" src="image/slay background.jpg" alt="Slay the Spire">
-        <img class="img-icon" src="image/deadcell icon.png" alt="Dead Cells character">
+        <img class="img-icon" src="image/rogue%20icon.png" alt="rogue 1980 character">
+        <img class="img-slide active" src="image/rogue%20background.png" alt="rogue 1980">
+        <img class="img-icon" src="image/issac%20icon.png" alt="Issac">
+        <img class="img-slide" src="image/issac%20background.jpg" alt="Binding of Issac: Rebirth">
+        <img class="img-icon" src="image/slay%20icon.png" alt="Slay the Spire character">
+        <img class="img-slide" src="image/slay%20background.jpg" alt="Slay the Spire">
+        <img class="img-icon" src="image/deadcell%20icon.png" alt="Dead Cells character">
         <img class="img-slide" src="image/deadcell.png" alt="Dead Cells">
 
         <div class="content active">
