--- a/slay.html
+++ b/slay.html
@@ -63,13 +63,13 @@
             </div>
 
             <div class="imgContainer">
-                <img src="image/slay about.jpg" alt="Slay the Spire game cover">
+                <img src="image/slay%20about.jpg" alt="Slay the Spire game cover">
             </div>
         </div>
 
         <div class="descriptionContainer">
             <div class="imgContainer">
-                <img class="characterImg" src="image/slay characters.jpg" alt="Slay the Spire characters">
+                <img class="characterImg" src="image/slay%20characters.jpg" alt="Slay the Spire characters">
             </div>
 
             <div class="description">
@@ -104,7 +104,7 @@
             </div>
 
             <div class="imgContainer">
-                <img src="image/slay boss.jpg" alt="Slay the Spire bosses">
+                <img src="image/slay%20boss.jpg" alt="Slay the Spire bosses">
             </div>
         </div>
 
