--- a/Issac.html
+++ b/Issac.html
@@ -53,10 +53,12 @@
 
         <div class="descriptionContainer">
             <div class="description">
-                <h3 class="title">
-                    About
+                <div class="title">
+                    <h3>
+                        About
+                    </h3>
                     <div class="border"></div>
-                </h3>
+                </div>
                 <p class="text">
                     Binding of Isaac: Rebirth is a critically acclaimed indie game developed by Edmund McMillen and Nicalis. It is a rogue-like dungeon crawler that features randomly generated levels, permadeath, and a variety of unique items and power-ups that alter the gameplay experience with each playthrough. The game follows the story of a young boy named Isaac who must navigate his way through a series of grotesque dungeons to escape his religiously fanatical mother's murderous intentions. With a diverse cast of playable characters, challenging bosses and enemies, and a wide range of unlockables, Binding of Isaac: Rebirth offers a highly replayable and deeply satisfying experience that has captivated players since its release in 2014.
                 </p>
@@ -73,10 +75,12 @@
             </div>
 
             <div class="description">
-                <h3 class="title">
-                    Characters
+                <div class="title">
+                    <h3>
+                        Characters
+                    </h3>
                     <div class="border"></div>
-                </h3>
+                </div>
                 <p class="text">
                     Binding of Isaac features a diverse cast of playable characters, each with their own unique abilities and playstyles.
                 </p>
@@ -94,10 +98,12 @@
 
         <div class="descriptionContainer">
             <div class="description">
-                <h3 class="title">
-                    Anemies and Bosses
+                <div class="title">
+                    <h3>
+                        Anemies and Bosses
+                    </h3>
                     <div class="border"></div>
-                </h3>
+                </div>
                 <p class="text">
                     In Binding of Isaac: Rebirth, bosses are powerful enemies that players must defeat to progress through the game. They are often larger and more challenging than regular enemies, with unique abilities and attack patterns that require players to use their skills and upgrades to defeat them.
                 </p>
@@ -115,10 +121,12 @@
         </div>
 
         <div class="achievements">
-            <h3 class="title">
-                Achievements
+            <div class="title">
+                <h3>
+                    Achievements
+                </h3>
                 <div class="border"></div>
-            </h3>
+            </div>
         </div>
     </main>
 
