--- a/deadcells.html
+++ b/deadcells.html
@@ -53,10 +53,12 @@
 
         <div class="descriptionContainer">
             <div class="description">
-                <h3 class="title">
-                    About
+                <div class="title">
+                    <h3>
+                        About
+                    </h3>
                     <div class="border"></div>
-                </h3>
+                </div>
                 <p class="text">
                     Dead Cells is an action-packed roguelike metroidvania game where players explore a deadly castle filled with enemies and obstacles. Players must fight their way through each level using melee and ranged weapons, magical abilities, and gadgets while collecting cells to unlock permanent upgrades and blueprints for new items. With randomized levels and permadeath, Dead Cells offers a challenging and exciting gameplay experience that rewards skillful combat and strategic thinking.
                 </p>
@@ -73,10 +75,12 @@
             </div>
 
             <div class="description">
-                <h3 class="title">
-                    Characters
+                <div class="title">
+                    <h3>
+                        Characters
+                    </h3>
                     <div class="border"></div>
-                </h3>
+                </div>
                 <p class="text">
                     Dead Cells does not have traditional playable characters, but instead features a customizable protagonist who is a reanimated corpse. Players can equip their character with a variety of weapons and gadgets, each with their own unique attributes and abilities.
                 </p>
@@ -88,10 +92,12 @@
 
         <div class="descriptionContainer">
             <div class="description">
-                <h3 class="title">
-                    Anemies and Bosses
+                <div class="title">
+                    <h3>
+                        Anemies and Bosses
+                    </h3>
                     <div class="border"></div>
-                </h3>
+                </div>
                 <p class="text">
                     Dead Cells features a wide range of challenging enemies and bosses that players must face as they explore the dangerous castle. Enemies include zombies, skeletons, and other creatures that attack with melee or ranged attacks, as well as more unique enemies like flying bats and exploding barrels. Each enemy type has its own distinct behaviors and weaknesses that players must learn to overcome. Bosses are even more challenging than regular enemies, featuring unique abilities and massive health pools. These bosses include giant insects, demonic entities, and other powerful creatures that require careful planning and skillful combat to defeat.
                 </p>
@@ -103,10 +109,12 @@
         </div>
 
         <div class="achievements">
-            <h3 class="title">
-                Achievements
+            <div  class="title">
+                <h3>
+                    Achievements
+                </h3>
                 <div class="border"></div>
-            </h3>
+            </div>
         </div>
     </main>
 
