--- a/history.html
+++ b/history.html
@@ -39,10 +39,12 @@
 
         <div class="descriptionContainer">
             <div class="description">
-                <h3 class="title">
-                    What is Rogue and Rogue-like?
+                <div class="title">
+                    <h3>
+                        What is Rogue and Rogue-like?
+                    </h3>
                     <div class="border"></div>
-                </h3>
+                </div>
                 <p class="text">
                     Rogue is a classic dungeon-crawling game first released in 1980. It features procedurally generated levels, turn-based gameplay, and permadeath, meaning that when the player's character dies, they must start over from the beginning. The game has inspired numerous other games with similar gameplay and mechanics, which are often referred to as "roguelike" games.
                 </p>
@@ -63,10 +65,12 @@
             </div>
 
             <div class="description">
-                <h3 class="title">
-                    Origin of Rogue-like
+                <div class="title">
+                    <h3>
+                        Origin of Rogue-like
+                    </h3>
                     <div class="border"></div>
-                </h3>
+                </div>
                 <p class="text">
                     The history of roguelike games can be traced back to the classic game Rogue, which was first released in 1980. Rogue was a dungeon-crawling game that featured procedurally generated levels, turn-based gameplay, and permadeath, and it quickly became popular among computer enthusiasts and gamers.
                 </p>
@@ -81,10 +85,12 @@
 
         <div class="characteristics">
             <div class="description">
-                <h3 class="title">
-                    Characteristics of Rogue-like
+                <div class="title">
+                    <h3>
+                        Characteristics of Rogue-like
+                    </h3>
                     <div class="border"></div>
-                </h3>
+                </div>
                 <div class="character">
                     <h4>Procedurally generated levels</h4>
                     <p>Roguelikes use algorithms to randomly generate levels, making each playthrough unique.</p>
