--- a/slay.html
+++ b/slay.html
@@ -53,10 +53,12 @@
 
         <div class="descriptionContainer">
             <div class="description">
-                <h3 class="title">
-                    About
+                <div class="title">
+                    <h3>
+                        About
+                    </h3>
                     <div class="border"></div>
-                </h3>
+                </div>
                 <p class="text">
                     Slay the Spire is a deck-building roguelike game in which players must battle their way through randomly generated levels filled with challenging enemies and bosses. Players must build and manage their deck of cards, which includes a variety of attacks, skills, and special abilities, as they progress through the game. The game features multiple playable characters, each with their own unique abilities and playstyle, and rewards strategic thinking and careful deck-building.
                 </p>
@@ -73,10 +75,12 @@
             </div>
 
             <div class="description">
-                <h3 class="title">
-                    Characters
+                <div  class="title">
+                    <h3>
+                        Characters
+                    </h3>
                     <div class="border"></div>
-                </h3>
+                </div>
                 <p class="text">
                     Slay the Spire features four playable characters, each with their own unique abilities and playstyle.
                 </p>
@@ -94,10 +98,12 @@
 
         <div class="descriptionContainer">
             <div class="description">
-                <h3 class="title">
-                    Anemies and Bosses
+                <div class="title">
+                    <h3>
+                        Anemies and Bosses
+                    </h3>
                     <div class="border"></div>
-                </h3>
+                </div>
                 <p class="text">
                     Slay the Spire features a diverse set of bosses and enemies that become progressively more challenging as players progress through the game. Enemies range from basic melee and ranged attackers to more unique foes like thieves and birds. Bosses are much more powerful and require careful planning and strategy to defeat, often featuring unique abilities that can turn the tide of the battle. Players must carefully build their decks and make strategic decisions to overcome these challenging obstacles and progress through the game.
                 </p>
@@ -109,10 +115,12 @@
         </div>
 
         <div class="achievements">
-            <h3 class="title">
-                Achievements
+            <div class="title">
+                <h3>
+                    Achievements
+                </h3>
                 <div class="border"></div>
-            </h3>
+            </div>
         </div>
     </main>
 
